> Add dropdown [Date, Views, Duration, Comments] with descending and ascending for sorting videos
> Include filter on/off comments on videos
> Added "Videos Found:" that count all the videos in the grid
> Added "Show all videos" button at the bottom to show all the videos and then can minimize videos
> Music added: "Wuthering Waves Login OST"
> Have fade in music volume changes when open and close video modal (Still buggy so I'll fix it soon)
> Fixed comments replies that are not full shown on mobile, I'll fix it soon on author name
> Added idx number of each videos inside the ".yt-vid-thumb" at the top left
> Redesign the subscribe button
> Added subscriber function on yt channel when subscriber click, like "sub_confirmation=1"
> Added bg img from yt cover on yt header description with about 80% darker and 30% opacity

Feb 08, 2026
> Added how many likes on total likes and on each videos
> Added clickable link time on yt video description
> Since Jaymantrix AI doesn't know what's the live date and time, I'll change the prompt from "current" to "live"
> Can switch both of my YT channel, "Dalmanski GD" and "Jaytrixia"

Feb 09, 2026
> Redesign the comment and like toggle button, sort select and increment/decrement button and fixed on mobile

Feb 10,2026
> Add linear gradient backgrouund (dark blue) on yt video modal
> Fixed height on yt video modal comments and width on yt video details
> Added Pixel Particle Effects on screen

To-Do Task:
> Transfer ".yt-vid-section-header" function css code from "YT-vid-section.js" to "Main.jsx", add loading inside ".yt-vid-section-header" when loading...
> Fix on mobile bug on auto out when touch on menu-toggle due to close on outside of the left sidebar
> Fix comment section not hide footer and auto scroll when click chat on jaymantrix AI on script.js

> Fix ".left-nav-item" on text "chat with jaymantrix ai" not highlight
> Can track visitor (same function as chat-section)
> have RTX ON working properly