@@ -18,7 +18,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
     <script type="importmap">
     {
       "imports": {
@@ -35,5 +34,6 @@
         rtx.off();
       }
     </script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
