@@ -502,17 +502,13 @@
   padding: 6px 8px;
   border-radius: 8px;
   font-size: 0.85rem;
-}
-.yt-vid-like-badge {
   display: inline-flex;
+  align-items: center;  
+  gap: 6px;
 }
-.yt-vid-comments-badge {
-  background: rgba(255,255,255,0.02);
-  border: 1px solid rgba(255,255,255,0.02);
-  padding: 6px 8px;
-  border-radius: 8px;
-  font-size: 0.85rem;
-  color: #bdbdbd;
+.yt-glyph-icon {
+  width: 15px;
+  height: 15px;
 }
 .yt-vid-desc {
   font-size: 0.92rem;
