@@ -178,6 +178,7 @@ Feb 10,2026
 > Add linear gradient backgrouund (dark blue) on yt video modal
 > Fixed height on yt video modal comments and width on yt video details
 > Added Pixel Particle Effects on screen
+> Change in yt video item "Views", "Likes", and "Comments" to svg outline icon and added clock icon on date
 
 To-Do Task:
 > Transfer ".yt-vid-section-header" function css code from "YT-vid-section.js" to "Main.jsx", add loading inside ".yt-vid-section-header" when loading...
